// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render correctly in the default state 1`] = `
<div>
  <div
    class="checkbox -teal"
  >
    <input
      class="checkbox--native visually-hidden"
      id="example"
      type="checkbox"
      value=""
    />
    <label
      class="checkbox--label"
      for="example"
    >
      <span
        class="text -regular -darker"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should render correctly with optional props 1`] = `
<div>
  <div
    class="checkbox -teal custom-class-name -outline -invalid"
  >
    <input
      class="checkbox--native visually-hidden"
      data-testid="data-testid"
      disabled=""
      id="chechbox-id"
      name="chechbox-name"
      type="checkbox"
      value=""
    />
    <label
      class="checkbox--label"
      for="chechbox-id"
    >
      <span
        class="text -regular -darker"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;
